[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Oswald-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/EndScene.gd" type="Script" id=2]
[ext_resource path="res://Images/Oceanbg.png" type="Texture" id=3]
[ext_resource path="res://theme/ui.theme" type="Theme" id=4]
[ext_resource path="res://Tilemaps/RigTiles.tres" type="TileSet" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="EndScene" type="Node"]
script = ExtResource( 2 )

[node name="Oceanbg" type="Sprite" parent="."]
position = Vector2( 574, 282 )
scale = Vector2( 1.09491, 1.09491 )
texture = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.576471 )
margin_left = 333.0
margin_top = 47.0
margin_right = 727.0
margin_bottom = 508.0
theme = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -96.0
margin_right = 194.0
margin_bottom = 45.5
custom_fonts/font = SubResource( 1 )
text = "Game Complete"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_right = 84.0
margin_bottom = 47.5
custom_constants/separation = 15

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 150.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 3 )
text = "Quit Game"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131068, 55, 0, -65532, 50, 0, 4, 50, 0, 65540, 50, 0, 131076, -1073741768, 0, 196610, 536870957, 0, 196613, 536870958, 0, 196667, 3, 0, 196668, 3, 0, 196669, 3, 0, 262151, 536870913, 0, 262152, 536870913, 0, 262153, 536870913, 0, 262154, 536870913, 0, 262155, 49, 0, 262191, 18, 0, 262197, 18, 0, 262199, 1, 0, 262200, 1, 0, 262201, 1, 0, 262202, 1, 0, 262203, 1, 0, 262204, 1, 0, 262205, 1, 0, 262206, 1, 0, 262207, 1, 0, 262208, 1, 0, 262209, 1, 0, 262210, 1, 0, 393215, 536870965, 0, 327681, 536870966, 0, 327687, 7, 0, 327729, 1, 0, 327730, 1, 0, 327731, 1, 0, 327732, 1, 0, 393218, 48, 0, 393219, 47, 0, 393220, 536870959, 0, 393221, 536870959, 0, 393222, 536870960, 0, 393223, 7, 0, 393263, -1610612715, 0, 393265, 26, 0, 393267, 536870938, 0, 458753, 9, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 11, 0, 458759, 7, 0, 589823, 28, 0, 524289, 28, 0, 524291, 28, 0, 524293, 28, 0, 524295, 28, 0, 524297, 28, 0, 524299, 536870940, 0, 524301, 536870940, 0, 524303, 536870939, 0, 524335, -1610612715, 0, 524337, 26, 0, 524339, 536870938, 0, 655363, 25, 0, 655365, 536870937, 0, 655371, 536870930, 0, 655407, -1610612715, 0, 655409, 26, 0, 655411, 536870938, 0, 786435, 25, 0, 786437, 536870937, 0, 786443, -1610612715, 0, 786446, 33, 0, 786447, 32, 0, 786449, 33, 0, 786479, -1610612715, 0, 786481, 26, 0, 786483, 536870938, 0, 851982, 33, 0, 851983, 31, 0, 851985, 33, 0, 917507, 25, 0, 917509, 536870937, 0, 917515, -1610612715, 0, 917518, 33, 0, 917521, 33, 0, 917551, -1610612715, 0, 917553, 26, 0, 917555, 536870938, 0, 917560, 41, 0, 917563, 536870953, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 2, 0, 983057, 1, 0, 983058, 1, 0, 983059, 536870919, 0, 1048579, 25, 0, 1048581, 536870937, 0, 1048587, -1610612715, 0, 1048591, 25, 0, 1048593, 536870937, 0, 1048595, 536870919, 0, 1048623, -1610612715, 0, 1048625, 26, 0, 1048627, 536870938, 0, 1048633, 536870956, 0, 1048634, 536870954, 0, 1048635, 536870954, 0, 1048636, 44, 0, 1114131, 536870919, 0, 1114169, 536870956, 0, 1114170, 536870954, 0, 1114171, 536870954, 0, 1114172, 44, 0, 1179651, 25, 0, 1179653, 536870937, 0, 1179659, -1610612715, 0, 1179663, 25, 0, 1179665, 536870937, 0, 1179667, 536870919, 0, 1179695, -1610612715, 0, 1179697, 26, 0, 1179699, 536870938, 0, 1179705, 536870956, 0, 1179706, 536870954, 0, 1179707, 536870954, 0, 1179708, 44, 0, 1245203, 536870919, 0, 1245241, 536870956, 0, 1245242, 536870954, 0, 1245243, 536870954, 0, 1245244, 44, 0, 1310723, 25, 0, 1310725, 536870937, 0, 1310731, -1610612715, 0, 1310735, 25, 0, 1310737, 536870937, 0, 1310739, 536870919, 0, 1310767, -1610612715, 0, 1310769, 26, 0, 1310771, 536870938, 0, 1310776, 43, 0, 1310777, 536870956, 0, 1310778, 536870954, 0, 1310779, 536870954, 0, 1310780, 536870955, 0, 1376275, 536870919, 0, 1376295, 3, 0, 1376313, 536870956, 0, 1376314, 536870954, 0, 1376315, 536870954, 0, 1376316, 44, 0, 1441795, 25, 0, 1441797, 536870937, 0, 1441803, -1610612715, 0, 1441807, 25, 0, 1441809, 536870937, 0, 1441811, 536870919, 0, 1441831, 3, 0, 1441832, 3, 0, 1441839, -1610612715, 0, 1441841, 26, 0, 1441843, 536870938, 0, 1441849, 536870956, 0, 1441850, 536870954, 0, 1441851, 536870954, 0, 1441852, 44, 0, 1507347, 536870919, 0, 1507367, 0, 0, 1507368, 1, 0, 1507369, 2, 0, 1507385, 536870956, 0, 1507386, 536870954, 0, 1507387, 536870954, 0, 1507388, 44, 0, 1638399, 19, 0, 1572865, 19, 0, 1572867, 19, 0, 1572869, 19, 0, 1572871, 19, 0, 1572873, 19, 0, 1572875, -1610612715, 0, 1572877, 536870930, 0, 1572879, 25, 0, 1572881, 536870937, 0, 1572883, 536870919, 0, 1572911, -1610612715, 0, 1572913, 26, 0, 1572915, 536870938, 0, 1572921, 536870956, 0, 1572922, 536870954, 0, 1572923, 536870954, 0, 1572924, 44, 0, 1638419, 536870919, 0, 1638457, 536870956, 0, 1638458, 536870954, 0, 1638459, 536870954, 0, 1638460, 44, 0, 1703939, 25, 0, 1703941, 536870937, 0, 1703947, -1610612715, 0, 1703949, 536870930, 0, 1703951, 25, 0, 1703953, 536870937, 0, 1703955, 536870919, 0, 1703980, 1610612738, 0, 1703981, 1610612737, 0, 1703982, 1610612737, 0, 1703983, -1610612715, 0, 1703985, 26, 0, 1703987, 536870938, 0, 1703993, 536870956, 0, 1703994, 536870954, 0, 1703995, 536870954, 0, 1703996, 44, 0, 1769491, 536870919, 0, 1769529, 536870956, 0, 1769530, 536870954, 0, 1769531, 536870954, 0, 1769532, 44, 0, 1835011, 25, 0, 1835013, 536870937, 0, 1835019, -1610612715, 0, 1835021, 536870930, 0, 1835023, 536870916, 0, 1835024, 536870916, 0, 1835025, 536870937, 0, 1835026, 36, 0, 1835028, 34, 0, 1835031, 536870948, 0, 1835045, 5, 0, 1835055, -1610612715, 0, 1835057, 26, 0, 1835059, 536870938, 0, 1835065, 536870956, 0, 1835066, 536870954, 0, 1835067, 536870954, 0, 1835068, 44, 0, 1900559, 536870916, 0, 1900560, 536870916, 0, 1900561, 536870916, 0, 1900564, 37, 0, 1900580, 5, 0, 1900581, 5, 0, 1900582, 5, 0, 1900583, 5, 0, 1900601, 536870956, 0, 1900602, 536870954, 0, 1900603, 536870954, 0, 1900604, 44, 0, 1966083, 25, 0, 1966085, 536870937, 0, 1966091, -1610612715, 0, 1966093, 19, 0, 1966095, 19, 0, 1966097, 19, 0, 1966099, 19, 0, 1966101, 19, 0, 1966103, 19, 0, 1966105, 19, 0, 1966107, 19, 0, 1966109, 19, 0, 1966111, 19, 0, 1966113, 19, 0, 1966115, 19, 0, 1966117, 19, 0, 1966119, 19, 0, 1966121, 19, 0, 1966123, 19, 0, 1966125, 19, 0, 1966127, 19, 0, 1966129, 19, 0, 1966131, 19, 0, 1966133, 19, 0, 1966135, 536870931, 0, 1966137, 536870931, 0, 1966139, 536870931, 0, 1966141, 536870931, 0, 1966143, 536870931, 0, 1966145, 536870931, 0, 2097155, 25, 0, 2097157, 536870937, 0, 2097163, -1610612716, 0, 2097165, 21, 0, 2097167, 21, 0, 2097169, 21, 0, 2097171, 21, 0, 2097173, 21, 0, 2097175, -1073741804, 0, 2097177, 1610612756, 0, 2097179, 21, 0, 2097181, 21, 0, 2097183, 21, 0, 2097185, 21, 0, 2097187, 20, 0, 2097201, 26, 0, 2097203, 536870938, 0, 2228227, 25, 0, 2228229, 536870937, 0, 2228247, -1610612715, 0, 2228249, -1073741803, 0, 2228273, 26, 0, 2228275, 536870938, 0, 2359299, 25, 0, 2359301, 536870937, 0, 2359319, -1610612715, 0, 2359321, -1073741803, 0, 2359345, 26, 0, 2359347, 536870938, 0, 2490371, 25, 0, 2490373, 536870937, 0, 2490391, -1610612715, 0, 2490393, -1073741803, 0, 2490417, 26, 0, 2490419, 536870938, 0, 2621463, -1610612715, 0, 2621465, -1073741803, 0, 2621489, 26, 0, 2621491, 536870938, 0 )

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
